--- a/projects/sandbox/src/styles.scss
+++ b/projects/sandbox/src/styles.scss
@@ -1,6 +1,7 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+@import '@angular/cdk/overlay-prebuilt.css';
 
 html,
 body {
