feat(select): form with initial value

--- a/projects/ng-tw/src/modules/option/option.component.html
+++ b/projects/ng-tw/src/modules/option/option.component.html
@@ -1,5 +1,5 @@
 <div
-    class="text-gray-900 cursor-default select-none relative py-2"
+    class="text-gray-900 cursor-default select-none relative py-2 hover:bg-gray-50"
     [ngClass]="{'pl-9 pr-3': selectedIndicatorSide === 'left', 'pl-3 pr-9': selectedIndicatorSide === 'right', 'bg-gray-100': selected === true, 'bg-gray-50': active === true && selected !== true}"
     role="option"
 >
