--- a/projects/ng-tw/src/modules/select/select.component.html
+++ b/projects/ng-tw/src/modules/select/select.component.html
@@ -1,4 +1,3 @@
-{{value}}
 <button
     type="button"
     class="bg-white relative w-full border border-gray-300 rounded-md shadow-sm pl-3 pr-10 py-2 text-left cursor-default focus:outline-none focus:ring-1 focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
@@ -11,16 +10,17 @@
 >
     <span
         class="block truncate"
-        [ngClass]="{'block': !value}"
-        [hidden]="value"
+        [ngClass]="{'block': !innerValue || !htmlValue}"
+        [hidden]="innerValue && htmlValue"
     >
         {{ placeholder}}
     </span>
 
     <span
         class="block truncate"
-        [innerHtml]="this.htmlValue"
-        [hidden]="!value"
+        [innerHtml]="htmlValue"
+        [ngClass]="{'block': innerValue && htmlValue}"
+        [hidden]="!innerValue || !htmlValue"
     ></span>
 
     <span class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none">
