--- a/projects/sandbox/src/styles.scss
+++ b/projects/sandbox/src/styles.scss
@@ -12,3 +12,50 @@ body {
 .container {
     @apply w-full max-w-[1280px] my-0 mx-auto block relative;
 }
+
+.prose {
+    font-size: 1rem;
+    line-height: 1.75;
+
+    code {
+        color: #1a202c;
+        font-weight: 400;
+        font-size: 0.875em;
+        background-color: #f7fafc;
+        padding: 0.25rem;
+        border-width: 1px;
+        border-color: #edf2f7;
+        border-radius: 0.25rem;
+    }
+
+    h1 {
+        @apply text-4xl font-semibold mb-4;
+    }
+
+    h2 {
+        @apply text-2xl font-semibold mt-7 mb-5 pb-2 border-b border-gray-200;
+    }
+
+    p {
+        @apply py-4;
+    }
+}
+
+.side-navigation-container {
+    @apply py-4 lg:py-8 lg:pl-8 lg:pr-2;
+
+    .title {
+        @apply mb-3 lg:mb-2 text-gray-400 uppercase tracking-wider font-bold text-sm lg:text-xs;
+    }
+
+    li {
+        @apply text-gray-700 border-t border-dashed first:border-t-0;
+
+        a {
+            @apply block text-sm ease-in-out duration-300 hover:pl-1 py-2;
+            &.active {
+                @apply text-primary-500;
+            }
+        }
+    }
+}
