--- a/projects/sandbox/src/app/routes/introduction-side-route/introduction-side-route.component.html
+++ b/projects/sandbox/src/app/routes/introduction-side-route/introduction-side-route.component.html
@@ -4,6 +4,8 @@
         <li *ngFor="let item of navigation">
             <a
                 [routerLink]="[item.link]"
+                [routerLinkActive]="'active'"
+                [routerLinkActiveOptions]="{ matrixParams: 'exact', queryParams: 'exact', paths: 'exact', fragment: 'exact' }"
                 [fragment]="item.fragment || null"
             >
                 {{ item.label }}
