feat(sandbox): footer and main side navigation

--- a/projects/sandbox/src/styles.scss
+++ b/projects/sandbox/src/styles.scss
@@ -10,7 +10,7 @@ body {
 }
 
 .container {
-    @apply w-full max-w-[1280px] my-0 mx-auto block relative;
+    @apply w-full max-w-[1280px] my-0 mx-auto relative;
 }
 
 .prose {
