--- a/projects/sandbox/src/app/app.component.html
+++ b/projects/sandbox/src/app/app.component.html
@@ -17,15 +17,8 @@
                 </div>
                 <div class="flex-1 flex justify-start w-4/6">
                 </div>
-                <div class="lg:w-1/5 flex items-center pl-4 lg:pl-8 justify-between">
+                <div class="lg:w-1/5 flex items-center pl-4 lg:pl-8 justify-end">
                     <div class="flex items-center">
-                        <a
-                            href="/releases"
-                            class="font-semibold leading-none text-gray-700 hover:text-primary-500 text-base mr-4"
-                        >
-                            v0.0.1
-                        </a>
-
                         <a
                             href="https://twitter.com/mtdade"
                             target="_blank"
@@ -93,62 +86,22 @@
             <aside class="w-full lg:w-1/5 lg:block fixed lg:relative inset-0 mt-16 lg:mt-0 z-30 bg-white lg:bg-transparent hidden">
                 <div class="lg:sticky lg:top-16 overflow-y-auto h-full lg:h-auto lg:max-h-(screen-16)">
                     <ul class="p-4 lg:py-8 lg:pl-0 lg:pr-8">
-                        <li class="mb-4 active">
-                            <p class="mb-2 text-gray-400 uppercase tracking-wider font-bold text-sm lg:text-xs">Getting started</p>
+                        <li
+                            class="mb-4 active"
+                            *ngFor="let item of navigation"
+                        >
+                            <p class="mb-2 text-gray-400 uppercase tracking-wider font-bold text-sm lg:text-xs">{{item.label}}</p>
                             <ul>
-                                <li class="text-gray-700">
+                                <li
+                                    class="text-gray-700"
+                                    *ngFor="let inner of item.links"
+                                >
                                     <a
-                                        href="/"
+                                        [routerLink]="[inner.link]"
+                                        routerLinkActive="text-primary-500 bg-primary-100 hover:text-primary-500"
                                         class="px-2 rounded font-medium py-1 hover:text-primary-500 flex items-center justify-between"
                                     >
-                                        Introduction
-                                    </a>
-                                </li>
-                                <li class="text-gray-700">
-                                    <a
-                                        href="/installation"
-                                        class="px-2 rounded font-medium py-1 hover:text-primary-500 flex items-center justify-between text-primary-500 bg-primary-100 hover:text-primary-500"
-                                        aria-current="page"
-                                    >
-                                        Installation
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-
-                        <li class="mb-4 active">
-                            <p class="mb-2 text-gray-500 uppercase tracking-wider font-bold text-sm lg:text-xs">Components</p>
-                            <ul>
-                                <li class="text-gray-700">
-                                    <a
-                                        href="/"
-                                        class="px-2 rounded font-medium py-1 hover:text-primary-500 flex items-center justify-between"
-                                    >
-                                        Button
-                                    </a>
-                                </li>
-                                <li class="text-gray-700">
-                                    <a
-                                        href="/installation"
-                                        class="px-2 rounded font-medium py-1 hover:text-primary-500 flex items-center justify-between"
-                                    >
-                                        Notification
-                                    </a>
-                                </li>
-                                <li class="text-gray-700">
-                                    <a
-                                        href="/installation"
-                                        class="px-2 rounded font-medium py-1 hover:text-primary-500 flex items-center justify-between"
-                                    >
-                                        Progress Bar
-                                    </a>
-                                </li>
-                                <li class="text-gray-700">
-                                    <a
-                                        href="/installation"
-                                        class="px-2 rounded font-medium py-1 hover:text-primary-500 flex items-center justify-between"
-                                    >
-                                        Select
+                                        {{inner.label}}
                                     </a>
                                 </li>
                             </ul>
@@ -158,7 +111,7 @@
             </aside>
 
             <div class="flex flex-wrap-reverse w-full lg:w-4/5">
-                <div class="w-full py-4 lg:pt-8 lg:pb-4 border-gray-300 lg:w-3/4 lg:border-l lg:border-r">
+                <div class="w-full py-4 lg:pt-8 lg:pb-4 border-gray-200 lg:w-3/4 lg:border-l lg:border-r">
                     <router-outlet></router-outlet>
                 </div>
 
@@ -170,4 +123,42 @@
             </div>
         </div>
     </div>
+
+    <footer class="h-16 relative w-full border-t z-20">
+        <div class="container h-full w-full flex mx-auto px-4 lg:px-8 items-center justify-between">
+            <div class="flex items-end">
+                <a
+                    href="https://github.com/matheusdavidson"
+                    target="_blank"
+                >
+                    Made with <span class="text-red-500">&hearts;</span> by <b>MTDA</b>
+                </a>
+            </div>
+            <div class="flex items-center space-x-4">
+                <div class="relative inline-block text-left inline-flex">
+                    <a
+                        href="/releases"
+                        class="font-semibold leading-none text-gray-700 hover:text-primary-500 text-base mr-4 inline-flex items-center"
+                    >
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            class="h-5 w-5 mr-1"
+                            fill="none"
+                            viewBox="0 0 24 24"
+                            stroke="currentColor"
+                            stroke-width="2"
+                        >
+                            <path
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                                d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
+                            />
+                        </svg>
+
+                        0.0.1
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </div>
