--- a/projects/sandbox/src/app/app.component.html
+++ b/projects/sandbox/src/app/app.component.html
@@ -99,6 +99,7 @@
                                     <a
                                         [routerLink]="[inner.link]"
                                         routerLinkActive="text-primary-500 bg-primary-100 hover:text-primary-500"
+                                        [routerLinkActiveOptions]="{exact: true}"
                                         class="px-2 rounded font-medium py-1 hover:text-primary-500 flex items-center justify-between"
                                     >
                                         {{inner.label}}
