--- a/projects/sandbox/src/app/routes/introduction-route/introduction-route.component.html
+++ b/projects/sandbox/src/app/routes/introduction-route/introduction-route.component.html
@@ -1,5 +1,5 @@
 <article class="prose max-w-none lg:px-8">
-    <h1>
+    <h1 id="introduction">
         Introduction
     </h1>
 
@@ -7,10 +7,7 @@
         <b>ng-tw</b> is a package to help you build a complete web application with Angular and Tailwind CSS. It's <b>an implementation of tailwind</b> components that requires javascript to run, <b>the logic</b> of these components <b>runs on angular</b>.
     </p>
 
-    <h2
-        id="components"
-        class="text-2xl"
-    >
+    <h2 id="components">
         Components
     </h2>
 
