--- a/projects/sandbox/src/app/routes/installation-route/installation-route.component.html
+++ b/projects/sandbox/src/app/routes/installation-route/installation-route.component.html
@@ -39,6 +39,12 @@
     <h4>Color config in <code class="tw-code">tailwind.config.js</code></h4>
 
     <markdown [data]="markdownTailwindColorConfig"></markdown>
+
+    <h4>Content</h4>
+
+    <p>Tailwind uses purge to make the bundle size smaller, you'll need to setup the lib in the <code class="tw-code">content</code> section of your <code class="tw-code">tailwind.config.js</code> to make it work</p>
+
+    <markdown [data]="markdownTailwindContentConfig"></markdown>
 </article>
 
 <div class="content-footer">
