--- a/projects/sandbox/src/app/routes/c-button-side-route/c-button-side-route.component.html
+++ b/projects/sandbox/src/app/routes/c-button-side-route/c-button-side-route.component.html
@@ -1,1 +1,15 @@
-<p>c-button-side-route works!</p>
+<nav class="side-navigation-container">
+    <p class="title">On this page</p>
+    <ul>
+        <li *ngFor="let item of navigation">
+            <a
+                [routerLink]="[item.link]"
+                [routerLinkActive]="'active'"
+                [routerLinkActiveOptions]="{ matrixParams: 'exact', queryParams: 'exact', paths: 'exact', fragment: 'exact' }"
+                [fragment]="item.fragment || null"
+            >
+                {{ item.label }}
+            </a>
+        </li>
+    </ul>
+</nav>
