--- a/projects/sandbox/src/styles.scss
+++ b/projects/sandbox/src/styles.scss
@@ -36,6 +36,10 @@ body {
         @apply text-2xl font-semibold mt-7 mb-5 pb-2 border-b border-gray-200;
     }
 
+    h3 {
+        @apply text-lg font-semibold mb-2 mt-6;
+    }
+
     h4 {
         @apply text-base font-semibold mb-2 mt-6;
     }
@@ -49,11 +53,26 @@ body {
     }
 }
 
+.demo-container {
+    @apply flex flex-col divide-y;
+
+    .demo-row {
+        @apply md:p-4 py-4 flex md:flex-row flex-col md:space-x-3 md:space-y-0 space-y-3 md:items-center;
+    }
+
+    .demo-row-title {
+        @apply md:w-2/12 w-full;
+    }
+
+    .demo-row-content {
+        @apply flex md:flex-row flex-col md:space-x-3 md:space-y-0 space-y-3;
+    }
+}
 .side-navigation-container {
-    @apply py-4 lg:py-8 lg:pl-8 lg:pr-2;
+    @apply py-4 xl:py-8 xl:pl-8 xl:pr-2;
 
     .title {
-        @apply mb-3 lg:mb-2 text-gray-400 uppercase tracking-wider font-bold text-sm lg:text-xs;
+        @apply mb-3 xl:mb-2 text-gray-400 uppercase tracking-wider font-bold text-sm xl:text-xs;
     }
 
     li {
@@ -69,7 +88,7 @@ body {
 }
 
 .bottom-navigation-container {
-    @apply grid grid-cols-2 gap-2 lg:px-8 pt-4 border-t;
+    @apply grid grid-cols-2 gap-2 xl:px-8 pt-4 border-t;
 
     a {
         @apply text-primary-500 font-bold hover:underline flex items-center;
