--- a/projects/sandbox/src/app/routes/c-button-route/c-button-route.component.html
+++ b/projects/sandbox/src/app/routes/c-button-route/c-button-route.component.html
@@ -3,7 +3,7 @@
         Button
     </h1>
 
-    <p>To use the button component, first you need to load on your module:</p>
+    <p>To use the button component you need to load on your module:</p>
 
     <markdown [data]="markdownLoad"></markdown>
 
