fix(select/scroll): overlay should be locked while scrolling the page [fixes #3]

--- a/projects/ng-tw/src/modules/select/select.component.html
+++ b/projects/ng-tw/src/modules/select/select.component.html
@@ -44,6 +44,7 @@
 <ng-template
     cdkConnectedOverlay
     cdkConnectedOverlayHasBackdrop
+    cdkConnectedOverlayLockPosition
     [cdkConnectedOverlayBackdropClass]="'cdk-overlay-transparent-backdrop'"
     [cdkConnectedOverlayOrigin]="trigger"
     [cdkConnectedOverlayOpen]="isOpen"
