--- a/projects/sandbox/src/app/routes/introduction-route/introduction-route.component.html
+++ b/projects/sandbox/src/app/routes/introduction-route/introduction-route.component.html
@@ -15,7 +15,7 @@
     </button>
 
     <tw-dropdown #dropdown>
-        <div tw-dropdown-item (click)="teste()">teste</div>
+        <button tw-dropdown-item (click)="teste()">teste</button>
         <div tw-dropdown-item>teste 2</div>
         <div tw-dropdown-item>teste 4</div>
     </tw-dropdown>
