--- a/projects/sandbox/src/app/routes/introduction-route/introduction-route.component.html
+++ b/projects/sandbox/src/app/routes/introduction-route/introduction-route.component.html
@@ -15,9 +15,9 @@
     </button>
 
     <tw-dropdown #dropdown>
-        <button tw-dropdown-item (click)="teste()">teste</button>
-        <div tw-dropdown-item>teste 2</div>
-        <div tw-dropdown-item>teste 4</div>
+        <button tw-dropdown-item (click)="teste()">ivi</button>
+        <div tw-dropdown-item>Geis</div>
+        <div tw-dropdown-item>Matheus</div>
     </tw-dropdown>
 
 
