--- a/projects/ng-tw/src/modules/option/option.component.html
+++ b/projects/ng-tw/src/modules/option/option.component.html
@@ -1,30 +1,23 @@
-<div
-    class="text-gray-900 cursor-default select-none relative py-2 hover:bg-gray-50"
-    [ngClass]="{'pl-9 pr-3': selectedIndicatorSide === 'left', 'pl-3 pr-9': selectedIndicatorSide === 'right', 'bg-gray-100': selected === true, 'bg-gray-50': active === true && selected !== true}"
-    role="option"
->
-    <div #content>
-        <ng-content></ng-content>
-    </div>
-
-    <span
-        class="text-primary-600 absolute inset-y-0 items-center pr-4"
-        [ngClass]="{'left-0': selectedIndicatorSide === 'left', 'right-0': selectedIndicatorSide === 'right', 'flex': selected === true}"
-        [hidden]="selected === false || !value"
-    >
-        <!-- Heroicon name: solid/check -->
-        <svg
-            class="h-5 w-5"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-            aria-hidden="true"
-        >
-            <path
-                fill-rule="evenodd"
-                d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
-                clip-rule="evenodd"
-            />
-        </svg>
-    </span>
+<div #content>
+    <ng-content></ng-content>
 </div>
+
+<span
+    [class]="getIndicatorClasses()"
+    [hidden]="selected === false || !value || !indicator"
+>
+    <!-- Heroicon name: solid/check -->
+    <svg
+        class="h-5 w-5"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 20 20"
+        fill="currentColor"
+        aria-hidden="true"
+    >
+        <path
+            fill-rule="evenodd"
+            d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+            clip-rule="evenodd"
+        />
+    </svg>
+</span>
